Fix spacing in welcome message

--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -236,9 +236,9 @@ h1.welcome svg * {
   fill: currentColor;
 }
 
-h1.welcome > * {
+/* h1.welcome > * {
   margin-right: 0.25em;
-}
+} */
 
 
 @media (min-width: 20em) {
